--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 body {
   height: 100%;
+  background-image: url("images/hip-square.png");
+  font-family: 'Indie Flower';
 }
 
 header, footer {
@@ -20,41 +22,70 @@ header {
 }
 
 img {
-  height: auto;
-  width: auto;
-  max-width: 450px;
-  max-height: 450px;
+  margin-left: 10%;
+  max-width: 100%;
+  max-height: 100%;
 }
 
 .image_canvas {
-  max-width: 455px;
-  max-height: 455px;
+  max-width: 100%;
+  max-height: 100%;
 }
 
 .column_wrapper{
-  min-width: 40%;
-  max-width: 60%;
-  max-height: 455px;
-  padding-left: 5%;
+  width: 70%;
+  max-height: 450px;
+  padding-left: 2%;
 }
 
-.word_label, .wrong_guesses, .play_again{
+.word_label, .wrong_guesses, .solution{
   width: 100%;
-  min-height: 150px;
-  margin-top: 4%;
-  padding-left: 5%;
+  min-height: 100px;
+  margin-top: 2%;
+  padding-left: 2%;
   font-style: bolder;
   font-size: 50px;
 }
 
-.play_again{
-  padding-left: 40%;
+.word_label, .play_again{
+  min-height:60px;
 }
 
-button{
-  display: flex;
+.play_again{
+  min-height: 35px;
+  width: auto;
+  padding-left: 1%;
+  padding-top: 5%;
+}
+
+button {
+  background: #d934d9;
+  background-image: -webkit-linear-gradient(top, #d934d9, #502bb8);
+  background-image: -moz-linear-gradient(top, #d934d9, #502bb8);
+  background-image: -ms-linear-gradient(top, #d934d9, #502bb8);
+  background-image: -o-linear-gradient(top, #d934d9, #502bb8);
+  background-image: linear-gradient(to bottom, #d934d9, #502bb8);
+  -webkit-border-radius: 60;
+  -moz-border-radius: 60;
+  border-radius: 60px;
+  color: #ffffff;
+  padding: 10px 20px 10px 20px;
+  border: solid #8c1f76 2px;
+  text-decoration: none;
   width: 150px;
   height: 50px;
   justify-content: center;
-  flex-direction: row;
+  font-family: 'Indie Flower';
+  font-size: 20px;
+  font-weight: bolder;
+}
+
+button:hover {
+  background: #a69cff;
+  background-image: -webkit-linear-gradient(top, #a69cff, #5534d9);
+  background-image: -moz-linear-gradient(top, #a69cff, #5534d9);
+  background-image: -ms-linear-gradient(top, #a69cff, #5534d9);
+  background-image: -o-linear-gradient(top, #a69cff, #5534d9);
+  background-image: linear-gradient(to bottom, #a69cff, #5534d9);
+  text-decoration: none;
 }
